# code-preprocessor

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Dockerfile  README.md  config.yaml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: maintenance.yml  testing.yml
code_preprocessor/: __init__.py  __main__.py  config.py  constants.py  processor.py
code_preprocessor/models/: __init__.py  code_block.py
code_preprocessor/parsers/: __init__.py  rust_parser.py
code_preprocessor/tokenizers/: __init__.py  code_tokenizer.py  rust_tokenizer.py
code_preprocessor/training/: __init__.py  gpu_config.py  model_trainer.py
code_preprocessor/utils/: config_loader.py  logging.py  resource_manager.py
tests/: __init__.py  conftest.py  test_config.py
